[project]
name = "multiple-personality-system-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "jieba>=0.42.1",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "mkdocs-glightbox>=0.3.7",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "nltk>=3.9.2",
    "pillow>=10.2.0",
    "pymdown-extensions>=10.7",
    "pypinyin>=0.55.0",
    "python-frontmatter>=1.1.0",
    "python-markdown-math>=0.8",
    "pyyaml>=6.0.3",
    "unidecode>=1.4.0",
]
